--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NW Gallery Cph</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900&display=swap" rel="stylesheet">
+
+
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -53,7 +61,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
             <img src="billeder/svampebob.png">
 
-            <button>- More</button>
+            <a href="news.html#news"><button>- More</button></a>
             <h1>STORE</h1>
         </div>
 
@@ -73,7 +81,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptates minus nam, recusandae quis quam odit voluptatem quaerat sed consequuntur, soluta quibusdam eaque quos optio amet asperiores consequatur, consectetur quisquam.</p>
                 </div>
             </div>
-            <button>- More</button>
+            <a href="store.html#store"><button>- More</button></a>
             <h1>BOOKS</h1>
         </div>
     </section>
@@ -91,7 +99,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptate optio quibusdam perspiciatis, officia fugit sapiente odio soluta adipisci, quisquam eos aliquam consequatur maxime autem quam rerum ducimus ab velit?</p>
                 </div>
             </div>
-            <button>- More</button>
+            <a href="books.html#books"><button>- More</button></a>
             <h1>WORKSHOPS</h1>
         </div>
     </section>
@@ -108,7 +116,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus suscipit omnis, minus molestiae iure, atque autem, quaerat optio, numquam ex quam sequi deleniti. Beatae voluptatum, omnis. Accusamus quis repellendus ad!</p>
             </div>
             <div class="col_bottom">
-                <button>- More</button>
+                <a href="workshops.html#workshop"><button>- More</button></a>
 
             </div>
             <h1>ABOUT</h1>
@@ -127,7 +135,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolorem similique mollitia maiores sunt, aliquam eos! Officia iusto assumenda fuga enim, saepe nam a, omnis consectetur illo ea magnam.</p>
                 </div>
             </div>
-            <button>- More</button>
+            <a href="about.html" #about><button>- More</button></a>
             <h1>Footer</h1>
         </div>
     </section>
@@ -138,13 +146,15 @@
 
         <div class="sectionwrapper">
             <div class="col">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati sed ducimus tenetur, similique, delectus aspernatur, minima sunt quo quidem atque unde ratione dolor sapiente alias placeat, ipsa aliquid ipsam?
+                <h3><b>Get in touch</b></h3>
+                <p class="line_space">
+                    Nansensgade 10<br>1366 Copenhagen K<br>mail@nw-gallery.dk
                 </p>
             </div>
             <div class="col">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati sed ducimus tenetur, similique, delectus aspernatur, minima sunt quo quidem atque unde ratione dolor sapiente alias placeat, ipsa aliquid ipsam?
+                <h3><b>Opening hours</b></h3>
+                <p class="line_space">
+                    Wed 14 - 18<br>Sat 12 - 14<br>Or by appointment
                 </p>
             </div>
         </div>
