--- a/news.html
+++ b/news.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NW Gallery Cph</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900&display=swap" rel="stylesheet">
+
+
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,7 +37,7 @@
     <h1>News</h1>
 
     <section id="close">
-        <h1>Close</h1>
+        <h2>Close</h2>
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col_wide">
@@ -48,7 +56,7 @@
     </section>
 
     <section id="kalender">
-        <h1>Kalender</h1>
+        <h2>Kalender</h2>
         <div class="sectionwrapper">
             <div class="col_top">
                 <div class="col">
@@ -66,12 +74,12 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
                 </p>
             </div>
-            <button>Køb nu</button>
+            <a href="store.html#store"><button>Køb nu</button></a>
         </div>
     </section>
 
     <section id="new_program">
-        <h1>New program</h1>
+        <h2>New program</h2>
         <div class="sectionwrapper">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium tempore consequatur amet facere assumenda reprehenderit laboriosam voluptatem veritatis fuga magnam eveniet quas, excepturi quaerat, maiores commodi incidunt voluptatibus necessitatibus. Vero.
@@ -82,8 +90,8 @@
         </div>
     </section>
 
-    <section id="autumn_salon">
-        <h1>Autumn salon</h1>
+    <!--<section id="autumn_salon">
+        <h2>Autumn salon</h2>
         <div class="sectionwrapper">
             <div class="col_top">
                 <div class="col_wide">
@@ -118,19 +126,22 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
-    <footer>
-        <h1>Footer</h1>
+    <footer id="footer">
+        <div class="skew_grey"></div>
+
         <div class="sectionwrapper">
             <div class="col">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                <h3><b>Get in touch</b></h3>
+                <p class="line_space">
+                    Nansensgade 10<br>1366 Copenhagen K<br>mail@nw-gallery.dk
                 </p>
             </div>
             <div class="col">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                <h3><b>Opening hours</b></h3>
+                <p class="line_space">
+                    Wed 14 - 18<br>Sat 12 - 14<br>Or by appointment
                 </p>
             </div>
         </div>
