--- a/about.html
+++ b/about.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NW Gallery Cph</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900&display=swap" rel="stylesheet">
+
+
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -27,7 +35,7 @@
     </header>
 
     <section id="about_gallery">
-        <h1>About</h1>
+        <h2>About</h2>
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col">
@@ -69,17 +77,20 @@
         </div>
     </section>
 
-    <footer>
-        <h1>Footer</h1>
+    <footer id="footer">
+        <div class="skew_grey"></div>
+
         <div class="sectionwrapper">
             <div class="col">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                <h3><b>Get in touch</b></h3>
+                <p class="line_space">
+                    Nansensgade 10<br>1366 Copenhagen K<br>mail@nw-gallery.dk
                 </p>
             </div>
             <div class="col">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora incidunt deserunt illo aut atque. Hic minima, repudiandae adipisci quis recusandae exercitationem voluptates quisquam mollitia, possimus earum in, culpa atque assumenda.
+                <h3><b>Opening hours</b></h3>
+                <p class="line_space">
+                    Wed 14 - 18<br>Sat 12 - 14<br>Or by appointment
                 </p>
             </div>
         </div>
