josefine rettelser html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="landingpage">
         <div class="sectionwrapper">
             <div class="skew_grey">
-                <img src="img/logo/NWgallery_left_white.png">
+                <img src="img/logo/NWgallery_left_white.png" alt="logo">
             </div>
             <h1>NEWS</h1>
         </div>
@@ -63,7 +63,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
 
 
-            <a href="news.html#news"><button>- More</button></a>
+            <a href="news.html#news">- More</a>
             <h1>STORE</h1>
         </div>
 
@@ -83,7 +83,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptates minus nam, recusandae quis quam odit voluptatem quaerat sed consequuntur, soluta quibusdam eaque quos optio amet asperiores consequatur, consectetur quisquam.</p>
                 </div>
             </div>
-            <a href="store.html#store"><button>- More</button></a>
+            <a href="store.html#store">- More</a>
             <h1>BOOKS</h1>
         </div>
     </section>
@@ -101,7 +101,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptate optio quibusdam perspiciatis, officia fugit sapiente odio soluta adipisci, quisquam eos aliquam consequatur maxime autem quam rerum ducimus ab velit?</p>
                 </div>
             </div>
-            <a href="books.html#books"><button>- More</button></a>
+            <a href="books.html#books">- More</a>
             <h1>WORKSHOPS</h1>
         </div>
     </section>
@@ -118,7 +118,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus suscipit omnis, minus molestiae iure, atque autem, quaerat optio, numquam ex quam sequi deleniti. Beatae voluptatum, omnis. Accusamus quis repellendus ad!</p>
             </div>
             <div class="col_bottom">
-                <a href="workshops.html#workshop"><button>- More</button></a>
+                <a href="workshops.html#workshop">- More</a>
 
             </div>
             <h1>ABOUT</h1>
@@ -137,7 +137,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolorem similique mollitia maiores sunt, aliquam eos! Officia iusto assumenda fuga enim, saepe nam a, omnis consectetur illo ea magnam.</p>
                 </div>
             </div>
-            <a href="about.html" #about><button>- More</button></a>
+            <a href="about.html">- More</a>
             <h1>Footer</h1>
         </div>
     </section>
