jeppe, slopes landingpage

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <header>
         <nav>
             <!--            <a href="#splash">Forside</a>-->
-            <a href="index.html#logo" class="logo"></a>
-            <a href="index.html#logo" class="logo1">NW</a>
-            <a href="index.html#logo" class="logo2">Gallery</a>
+
             <a href="news.html#news">News</a>
             <a href="store.html#store">Store</a>
             <a href="books.html#books">Books</a>
@@ -37,32 +35,22 @@
 
     <section id="landingpage">
         <div class="sectionwrapper">
-            <div class="skew_grey">
-                <img src="img/logo/NWgallery_left_white.png">
-            </div>
+            <div class="logo"></div>
+            <div class="skew_grey"></div>
+            <div class="skew_grey1"></div>
             <h1>NEWS</h1>
+
         </div>
 
     </section>
 
 
     <section id="news">
-        <div class="skew_white"></div>
+
         <div class="sectionwrapper">
+            <div class="skew_white"></div>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, hic possimus rem minus ducimus sit, incidunt aut placeat neque optio maxime similique quod harum ullam deserunt veritatis error velit at.</p>
-
-
+            <div class="col"></div>
             <a href="news.html#news"><button>- More</button></a>
             <h1>STORE</h1>
         </div>
