--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         <div class="skew_white"></div>
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col">
+                <div class="col_narrow">
 
                 </div>
-                <div class="col">
+                <div class="col_wide">
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptate optio quibusdam perspiciatis, officia fugit sapiente odio soluta adipisci, quisquam eos aliquam consequatur maxime autem quam rerum ducimus ab velit?</p>
                 </div>
