--- a/about.html
+++ b/about.html
@@ -43,13 +43,20 @@
                 </div>
                 <div class="col">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, deserunt recusandae voluptatem praesentium numquam laborum suscipit, ratione voluptates aliquid quam eveniet quod quo, sapiente! Voluptate voluptates quos aliquid nesciunt.
+                        NW Gallery is an artist driven contemporary art gallery located in the center of Copenhagen. In this gallery we focuses on photography and the diversity of artistic expression within different fields. We have worked with Mixed media, Video, Photobooks, Photography with and without camera, Unique Artist Books in limited editions<br>
+
+                        Our passion is visual story telling with heart and soul. The artists and their works often search for and asks questions of human existentialism. Mentally and physically relating to being here.
                     </p>
                 </div>
             </div>
             <div class="mid1">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, deserunt recusandae voluptatem praesentium numquam laborum suscipit, ratione voluptates aliquid quam eveniet quod quo, sapiente! Voluptate voluptates quos aliquid nesciunt.
+                    The gallery aim to show the artistic process of making, the artists exploration of the difference in medium and method, and its possibilities and limitations.<br>
+                    We curates exhibitions with upcoming, new and established, nordic as well as international artists. The exhibitions are mostly site specific and unique; letting the audience get close to and immerse into the artists works.<br>
+
+                    Follow us and register for invitations to the next event in NW gallery.<br>
+
+                    Come visit us to experience our beautiful and strong composition of works of art and eminent photobook store.
                 </p>
             </div>
             <div class="mid2">
@@ -71,7 +78,31 @@
             </div>
             <div class="bottom">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, deserunt recusandae voluptatem praesentium numquam laborum suscipit, ratione voluptates aliquid quam eveniet quod quo, sapiente! Voluptate voluptates quos aliquid nesciunt.
+                    NW Gallery has exhibited art from the following artists:<br>
+
+                    Sara Skorgan Teigen (NO) -
+                    Katinka Goldberg (SE -
+                    Terje Abusdal (NO) -
+                    Jacob Aue Sobol (DK) -
+                    Inuuteq Storch (GR) -
+                    María Kristín Antònsdottír (IS) -
+                    Lene Harbo Pedersen (DK) -
+                    Kirstine Autzen (DK) -
+                    Calin Kruse (D) -
+                    Michael Søndergaard (DK) -
+                    Margot Wallard (FR) -
+                    Nina Worren (NO/DK) -
+                    Paula Duvå (DK) -
+                    Birk Thomassen (DK) -
+                    AdeY (UK) -
+                    Mia and Torill Marie Irmgard Klit (DK) -
+                    Kristyan Nicholson (US) -
+                    Cecilie Nicoline Rasmussen (DK) -
+                    Julia Mejnertsen/ Blankt Papir DK) -
+                    Linda Hansen (DK) -
+                    Diana Velasco (ES/DK) -
+                    Lene Hald (DK)
+
                 </p>
             </div>
         </div>
