--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 </div>
                 <div class="col_wide">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi voluptates minus nam, recusandae quis quam odit voluptatem quaerat sed consequuntur, soluta quibusdam eaque quos optio amet asperiores consequatur, consectetur quisquam.</p>
+                    <p>In NW gallerys little shop, we have a wide range of beautiful art by different artist.<br>
+                        We have some selected pieces in the online store and even more beautiful photographs and prints, if you come down to NW Gallery, at Nansensgade 10.</p>
                 </div>
             </div>
             <div id="more_button"><a href="news.html#news">- More</a> </div>
@@ -94,7 +95,13 @@
                 </div>
                 <div class="col_wide">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptate optio quibusdam perspiciatis, officia fugit sapiente odio soluta adipisci, quisquam eos aliquam consequatur maxime autem quam rerum ducimus ab velit?</p>
+                    <p>In the gallery we have a beautiful collection of books by photoartists.
+                        All of our books are limited edition books and are personally signed by the different artists.<br>
+
+                        We aim to show the customers the process of creating the books, and therefore you will often be able the find the sketches and pre published dummy versions of the books in our exhibitions.<br>
+                        All our books are created by hand, by the artist or handcrafted by a professional bookbinder.<br>
+
+                        The books being made by the artist themself, are - in its own right - an artistic creation. </p>
                 </div>
             </div>
             <div id="more_button"><a href="news.html#news">- More</a> </div>
@@ -111,7 +118,10 @@
 
             </div>
             <div class="col_mid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus suscipit omnis, minus molestiae iure, atque autem, quaerat optio, numquam ex quam sequi deleniti. Beatae voluptatum, omnis. Accusamus quis repellendus ad!</p>
+                <p>We are very excited to announce a new series of unique and intimate workshops in 2020.<br>
+                    All of our workshops are built around small groups, so as to foster proximity to the project in a comfortable and inviting environment, and also assures you dedicated time and attention from the teacher.<br>
+
+                    All are held in English and therefor open for international participants.</p>
             </div>
             <div class="col_bottom">
                 <div id="more_button"><a href="news.html#news">- More</a> </div>
@@ -130,7 +140,7 @@
 
                 </div>
                 <div class="col">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolorem similique mollitia maiores sunt, aliquam eos! Officia iusto assumenda fuga enim, saepe nam a, omnis consectetur illo ea magnam.</p>
+                    <p>NW Gallery is an artist driven contemporary art gallery located in the center of Copenhagen. In this gallery we focuses on photography and the diversity of artistic expression within different fields. We have worked with Mixed media, Video, Photobooks, Photography with and without camera, Unique Artist Books in limited editions.</p>
                 </div>
             </div>
             <div id="more_button"><a href="news.html#news">- More</a> </div>
