--- a/news.html
+++ b/news.html
@@ -45,18 +45,37 @@
                 </div>
                 <div class="col_narrow">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
+                        It is our two years anniversary here at NW Gallery, and we are deeply grateful for these two years of joys and struggles.<br>
+                        It all started with H E A R T.<br>
+
+                        We invite you to the opening: <br>
+                        December 1 from 14 - 18<br>
+
+                        Connecting people and telling stories that matters.<br>
+                        Making room for the quiet voices. The silent groups.<br>
+                        Showing the strength and beauty in vulnerability.<br>
+                        Being a place open for all...<br><br>
+
+                        - Personal stories about being C L O S E from selected artists:<br>
+
+                        AdeY (UK)- Katinka Goldberg (SE) - Søren Lilholt (DK)- Cecilie Nicoline Rasmussen (DK)- Jacob Aue Sobol (DK)- Sara Skorgan Teigen (NO)-  Margot Wallard (F)-  Denisse Ariana -  Pérez (DOM)and more…
                     </p>
                 </div>
             </div>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
+                Opening hours December 2 - 21:<br>
+                WED 14-18<br>
+                SAT 12-14<br><br>
+
+                1O% of the sales will be donated to Dannerhuset a women shelter house.<br>
+                 Read more about <a href="https://danner.dk">the Danner House</a>.
             </p>
         </div>
     </section>
 
     <section id="kalender">
-        <h2>Kalender</h2>
+        <h2>24X photo challenge calendar
+        </h2>
         <div class="sectionwrapper">
             <div class="col_top">
                 <div class="col">
@@ -71,7 +90,10 @@
             </div>
             <div class="col_mid">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit autem molestias, sapiente unde praesentium repellendus corporis incidunt nemo architecto blanditiis. Cupiditate consequuntur dignissimos soluta, perferendis suscipit ut, expedita quia itaque!
+                    This challenge is for all photo lovers out there.<br>
+                    We invite you to be inspired, to be focused and present, to create and discover new sides of yourself.
+                    With the 24X photo challenge calendar from December 1-24.
+                    The perfect gift for yourself or someone special.
                 </p>
             </div>
             <a href="store.html#store"><button>Køb nu</button></a>
@@ -79,13 +101,16 @@
     </section>
 
     <section id="new_program">
-        <h2>New program</h2>
+        <h2>New Workshop</h2>
         <div class="sectionwrapper">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium tempore consequatur amet facere assumenda reprehenderit laboriosam voluptatem veritatis fuga magnam eveniet quas, excepturi quaerat, maiores commodi incidunt voluptatibus necessitatibus. Vero.
+                We are very excited to announce a new series of unique and intimate workshops in 2020.
+                All of our workshops are built around small groups, so as to foster proximity to the project in a comfortable and inviting environment, and also assures you dedicated time and attention from the teacher.
+                The teachers are all experienced artists themselves and are among some of the best in their field.
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam hic dignissimos, quo eos, unde non. Beatae ipsam sint repudiandae eaque, dolores quam, id doloremque praesentium sapiente tenetur nostrum libero.
+                All are held in English and therefor open for international participants.
+
             </p>
         </div>
     </section>
