josefine burger igen

--- a/store.html
+++ b/store.html
@@ -19,18 +19,28 @@
 
 <body>
 
-    <header>
+    <header class="header">
         <nav>
+            <!--            <div id="menuknap">☰</div>-->
             <!--            <a href="#splash">Forside</a>-->
-            <a href="index.html#logo" class="logo"></a>
-            <a href="index.html#logo" class="logo1">NW</a>
-            <a href="index.html#logo" class="logo2">Gallery</a>
-            <a href="news.html#news">News</a>
-            <a href="store.html#store">Store</a>
-            <a href="books.html#books">Books</a>
-            <a href="workshops.html#workshop">Workshops</a>
-            <a href="about.html#about">About</a>
+            <a href="index.html#logo" class="logo">
+                LOGO
+            </a>
+
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
+            <ul class="menu">
+
+                <li> <a href="index.html#logo" class="logo1">NW</a></li>
+                <li> <a href="index.html#logo" class="logo2">Gallery</a></li>
+                <li><a href="news.html#news">News</a></li>
+                <li> <a href="store.html#store">Store</a></li>
+                <li> <a href="books.html#books">Books</a></li>
+                <li> <a href="workshops.html#workshop">Workshops</a></li>
+                <li> <a href="about.html#about">About</a></li>
+            </ul>
         </nav>
+
     </header>
 
     <h1>Store</h1>
