indsat billeder i css

--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
         <h2>About</h2>
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col">
-                    <img src="billeder/svampebob.png">
+                <div class="video">
+
                 </div>
                 <div class="col">
                     <p>
@@ -69,21 +69,13 @@
                 </p>
             </div>
             <div class="mid2">
-                <div class="col">
-                    <img src="billeder/svampebob.png">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
+                <div class="about_1"></div>
+                <div class="about_2"></div>
+                <div class="about_3"></div>
+                <div class="about_4"></div>
+                <div class="about_5"></div>
+                <div class="about_6"></div>
+
             </div>
             <div class="bottom">
                 <p>
