--- a/books.html
+++ b/books.html
@@ -46,18 +46,12 @@
     <section id="books_site">
         <h2>Books</h2>
         <div class="sectionwrapper">
-            <div class="col">
-                <img src="">
-            </div>
-            <div class="col">
-                <img src="">
-            </div>
-            <div class="col">
-                <img src="">
-            </div>
-            <div class="col">
-                <img src="">
-            </div>
+            <div class="book_1"></div>
+            <div class="book_2"></div>
+            <div class="book_3"></div>
+            <div class="book_4"></div>
+            <div class="book_5"></div>
+
         </div>
     </section>
 
