--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <div class="skew_white"></div>
 
 
-            <div class="col"></div>
+            <div class="col">
+
+            </div>
             <div id="more_button"><a href="news.html#news">- More</a> </div>
 
 
