--- a/news.html
+++ b/news.html
@@ -50,7 +50,7 @@
         <div class="sectionwrapper">
             <div class="top">
                 <div class="col_wide">
-                    <img src="billeder/svampebob.png">
+
                 </div>
                 <div class="col_narrow">
                     <p>
@@ -87,15 +87,9 @@
         </h2>
         <div class="sectionwrapper">
             <div class="col_top">
-                <div class="col">
-                    <img src="billeder/svampebob.png">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
+                <div class="img_1"></div>
+                <div class="img_2"></div>
+                <div class="img_3"></div>
             </div>
             <div class="col_mid">
                 <p>
