--- a/store.html
+++ b/store.html
@@ -49,12 +49,8 @@
         <h2>Onlineshop</h2>
         <div class="sectionwrapper">
             <div class="top">
-                <div class="col">
-                    <img src="">
-                </div>
-                <div class="col">
-                    <img src="">
-                </div>
+                <div class="store_1"></div>
+                <div class="store_2"></div>
             </div>
         </div>
     </section>
@@ -62,18 +58,15 @@
     <section id="shop_in_store">
         <h2>Shop in store</h2>
         <div class="sectionwrapper">
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+            <div class="row_1">
+                <div class="img_1"></div>
+                <div class="img_2"></div>
             </div>
-            <div class="col">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+            <div class="row_2">
+                <div class="img_3"></div>
+                <div class="img_4"></div>
             </div>
+
         </div>
     </section>
 
